idea/testData/multiplatform/hierarcicalActualization/common/common.kt
package foo

expect class <!LINE_MARKER("descr='Has actuals in common'")!>ExpectInCommonActualInMiddle<!>
expect class ExpectInCommonActualInPlatforms

expect class <!NO_ACTUAL_FOR_EXPECT, NO_ACTUAL_FOR_EXPECT!>ExpectInCommonWithoutActual<!>
